--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: python-app
+  name: python-code-app
   description: Python app that displays time.
   annotations:
     github.com/project-slug: aravindavvaru/python-code-app
