--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -2,11 +2,9 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: python-code-app
-  description: Python app that displays time.
   annotations:
     github.com/project-slug: aravindavvaru/python-code-app
-    backstage.io/techdocs-ref: dir:.
 spec:
-  type: service
+  type: other
+  lifecycle: unknown
   owner: guests
-  lifecycle: experimental
